--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>HeoMusic - 用音乐感染人心</title>
+  <title>Music - 音乐震撼人心</title>
   <link rel="stylesheet" type="text/css" href="./css/APlayer.min.css">
   <link rel="stylesheet" type="text/css" href="./main.css">
   <link rel="icon" type="image/x-icon" href="./img/icon.webp">
@@ -19,8 +19,8 @@
 <div id="heoMusic-page">
 </div>
 <script>
-  var userId = "8152976493";
-  var userServer = "netease";
+  var userId = "2147483648";
+  var userServer = "kugou";
   var userType = "playlist";
 </script>
 <script src="./js/APlayer.min.js"></script>
