--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <div id="heoMusic-page">
 </div>
 <script>
-  var userId = "gcid_3z12k6r99z4z002";
+  var userId = "3z12k6r99z4z002";
   var userServer = "kugou";
   var userType = "playlist";
 </script>
