--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 <div id="heoMusic-page">
 </div>
 <script>
-  var userId = "3z12k6r99z4z002";
-  var userServer = "kugou";
+  var userId = "532029451";
+  var userServer = "netease";
   var userType = "playlist";
 </script>
 <script src="https://cdn1.tianli0.top/gh/Mhatetk/Music@master/js/APlayer.min.js"></script>
