--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Music - 音乐震撼人心</title>
-  <link rel="stylesheet" type="text/css" href="./css/APlayer.min.css">
-  <link rel="stylesheet" type="text/css" href="./main.css">
-  <link rel="icon" type="image/x-icon" href="./img/icon.webp">
-  <link rel="apple-touch-icon" href="./img/icon-r.webp">
+  <link rel="stylesheet" type="text/css" href="https://cdn1.tianli0.top/gh/Mhatetk/Music@master/css/APlayer.min.css">
+  <link rel="stylesheet" type="text/css" href="https://cdn1.tianli0.top/gh/Mhatetk/Music@master/main.css">
+  <link rel="icon" type="image/x-icon" href="https://cdn1.tianli0.top/gh/Mhatetk/Music@master/img/icon.webp">
+  <link rel="apple-touch-icon" href="https://cdn1.tianli0.top/gh/Mhatetk/Music@master/img/icon-r.webp">
   <meta name="apple-mobile-web-app-title" content="音乐">
-  <link rel="bookmark" href="./img/icon.webp">
-  <link rel="apple-touch-icon-precomposed" sizes="180x180" href="./img/icon-r.webp">
+  <link rel="bookmark" href="https://cdn1.tianli0.top/gh/Mhatetk/Music@master/img/icon.webp">
+  <link rel="apple-touch-icon-precomposed" sizes="180x180" href="https://cdn1.tianli0.top/gh/Mhatetk/Music@master/img/icon-r.webp">
   <meta name="description" content="一个简单好用的音乐播放器。">
 </head>
 <body>
@@ -23,8 +23,8 @@
   var userServer = "netease";
   var userType = "playlist";
 </script>
-<script src="./js/APlayer.min.js"></script>
-<script src="./js/Meting2.min.js"></script>
-<script async data-pjax src="./js/main.js"></script>
+<script src="https://cdn1.tianli0.top/gh/Mhatetk/Music@master/js/APlayer.min.js"></script>
+<script src="https://cdn1.tianli0.top/gh/Mhatetk/Music@master/js/Meting2.min.js"></script>
+<script async data-pjax src="https://cdn1.tianli0.top/gh/Mhatetk/Music@master/js/main.js"></script>
 </body>
 </html>
