--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   var userType = "playlist";
 </script>
 <script src="https://cdn1.tianli0.top/gh/Mhatetk/Music@master/js/APlayer.min.js"></script>
-<script src="https://cdn1.tianli0.top/gh/Mhatetk/Music@master/js/Meting2.min.js"></script>
+<script src="https://cdn1.tianli0.top/gh/Mhatetk/Music@master/js/Meting.min.js"></script>
 <script async data-pjax src="https://cdn1.tianli0.top/gh/Mhatetk/Music@master/js/main.js"></script>
 </body>
 </html>
