--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 <div id="heoMusic-page">
 </div>
 <script>
-  var userId = "78674080";
-  var userServer = "netease";
+  var userId = "RDCLAK5uy_mjAJiE8flpX8OlujSbgylHKFYt-4smINE";
+  var userServer = "ytmusic";
   var userType = "playlist";
 </script>
 <script src="https://cdn1.tianli0.top/gh/Mhatetk/Music@master/js/APlayer.min.js"></script>
